--- a/dwm.1
+++ b/dwm.1
@@ -1,6 +1,6 @@
 .TH DWM 1 dwm\-VERSION
 .SH NAME
-dwm \- dynamic window manager (Luke Smith <https://lukesmith.xyz>'s build)
+dwm \- dynamic window manager (Luke Smith <https://lukesmith.xyz>'s build with Ricardo's rice)
 .SH SYNOPSIS
 .B dwm
 .RB [ \-v ]
